corrected padding error on logo/menu branc
I had mistakenly put a 12px padding all the way around .head-container
and so the logo and content below it were not lining up. I simply
restricted the padding to top and bottom.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 header {
-    padding: 12px;
+    padding: 12px 0px;
     background-color: #1f2937;
 }
 
@@ -43,10 +43,7 @@ ul {
 .hero-container {
     display: flex;
     justify-content: center;
-    padding-top: 60px;
-    padding-left: 12%;
-    padding-right: 12%;
-    padding-bottom: 60px;
+    padding: 60px 12%;
     gap: 36px;
 }
 
